kubernetes/front-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend  # Deployment name changed to frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chai-frontend
  template:
    metadata:
      labels:
        app: chai-frontend
    spec:
      containers:
      - name: frontend  # Container name changed to frontend
        image: FRONTEND_IMAGE_PLACEHOLDER
        ports:
        - containerPort: 80
