kubernetes/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service  # Service name aligned
spec:
  type: ClusterIP
  selector:
    app: chai-frontend
  ports:
  - port: 80
    targetPort: 80
