kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chai-politics-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service  # Matches the new service name
            port:
              number: 5000
              
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service  # Matches the new service name
            port:
              number: 80
